--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+		<script defer src="js/script.js"></script>
 		<title>Omnifood</title>
 	</head>
 	<body>
@@ -545,7 +546,8 @@
 						</li>
 					</ul>
 					<p class="copyright">
-						Copyright &copy; 2024 by Omnifood, Inc. All rights reserved.
+						Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+						All rights reserved.
 					</p>
 				</div>
 				<div class="address-col">
