--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						healthy again. Tailored to your personal tastes and nutritional
 						needs.
 					</p>
-					<a href="#" class="btn btn--full margin-right-sm"
+					<a href="#form" class="btn btn--full margin-right-sm"
 						>Start eating well</a
 					>
 					<a href="#" class="btn btn--outline">Learn more &darr;</a>
@@ -479,7 +479,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-cta">
+		<section class="section-cta" id="form">
 			<div class="container">
 				<div class="cta">
 					<div class="cta-text-box">
