--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 			</a>
 			<nav class="main-nav">
 				<ul class="main-nav-list">
-					<li><a class="main-nav-link" href="#">How it works</a></li>
-					<li><a class="main-nav-link" href="#">Meals</a></li>
-					<li><a class="main-nav-link" href="#">Testimonials</a></li>
-					<li><a class="main-nav-link" href="#">Pricing</a></li>
-					<li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+					<li><a class="main-nav-link" href="#how">How it works</a></li>
+					<li><a class="main-nav-link" href="#meals">Meals</a></li>
+					<li><a class="main-nav-link" href="#testimonial">Testimonials</a></li>
+					<li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+					<li>
+						<a class="main-nav-link nav-cta" href="#form">Try for free</a>
+					</li>
 				</ul>
 			</nav>
 			<button class="btn-mobile-nav">
@@ -56,7 +58,7 @@
 					<a href="#form" class="btn btn--full margin-right-sm"
 						>Start eating well</a
 					>
-					<a href="#" class="btn btn--outline">Learn more &darr;</a>
+					<a href="#how" class="btn btn--outline">Learn more &darr;</a>
 					<div class="delivered-meals">
 						<div class="delivered-imgs">
 							<img src="img/customers/customer-1.jpg" />
@@ -91,7 +93,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-how">
+		<section class="section-how" id="how">
 			<!-- Heading how it works -->
 			<div class="container">
 				<span class="subheading">How it works</span>
@@ -153,7 +155,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-meals margin-bottom-md">
+		<section class="section-meals margin-bottom-md" id="meals">
 			<div class="container center-text">
 				<span class="subheading">Meals</span>
 				<h2 class="heading-secondary">
@@ -260,7 +262,7 @@
 				<a href="#" class="link">See all recipes &rarr;;</a>
 			</div>
 		</section>
-		<section class="section-testimonials margin-bottom-md">
+		<section class="section-testimonials margin-bottom-md" id="testimonial">
 			<div class="testimonial-container">
 				<span class="subheading">testimonials</span>
 				<h2 class="heading-secondary">Once you try it, you can`t go back</h2>
@@ -374,7 +376,7 @@
 				</figure>
 			</div>
 		</section>
-		<section class="section-pricing">
+		<section class="section-pricing" id="pricing">
 			<div class="container">
 				<span class="subheading">Pricing</span>
 				<h2 class="heading-secondary">Eating well without breaking the bank</h2>
