--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="icon" href="img/favicon-small.png" />
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+		<link rel="manifest" href="manifest.webmanifest" />
+		<meta
+			name="description"
+			content="Omnifood is an AI-powered food subcription that will make you eat healtly again, 365 days per year. It`s tailored to your personal testes and nutritional needs." />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -21,7 +27,7 @@
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 		<script defer src="js/script.js"></script>
-		<title>Omnifood</title>
+		<title>Omnifood &mdash; Never cook again</title>
 	</head>
 	<body>
 		<header class="header">
