--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</li>
 				</ul>
 			</nav>
-			<button class="btn-mobile-nav">
+			<button class="btn-mobile-nav no-focus">
 				<ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
 				<ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
 			</button>
